--- a/style.css
+++ b/style.css
@@ -3,105 +3,77 @@
   margin: 0;
   box-sizing: border-box;
 }
-
-body {
+body{
   background-color: #151320;
   height: 100vh;
   display: grid;
   place-items: center center;
-  font-family:'Poppins',sans-serif;
+  font-family: 'Poppins',sans-serif;
 }
 .cards{
- display: grid;
- grid-template-columns: repeat(auto-fit,
- minmax(400px,1fr));
-padding: 20px;
-grid-gap: 40px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(400px,1fr));
+  padding: 20px;
+  grid-gap: 40px;
 }
-
-.card {
- background-color: #1c1b29;
- border-radius: 20px;
- box-shadow: 0 0 30px rgba(0,0,0,0.18);
+.card{
+  background-color: #1c1b29;
+  border-radius: 20px;
+  box-shadow: 0 0 30px rgba(0,0,0,0.18);
 }
-
-.container1{
+.container{
   position: relative;
   clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%);
-  background-image: 
-  linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(117, 19, 93, 0.73)),
-    url('images/background.jpg');
-}
-
-.container2{
-  position: relative;
-  clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%);
-  background-image: 
-  linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(96, 117, 19, 0.73)),
-    url('images/background.jpg');
-}
-.container3{
-  position: relative;
-  clip-path: polygon(0 0,100% 0, 100% 85%, 0 100%);
-  background-image: 
-  linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(19, 34, 117, 0.73)),
-    url('images/background.jpg');
 }
 img{
   width: 100%;
   display: block;
-  border-radius:20px 20px 0 0;
+  border-radius: 20px 20px 0 0;
 }
-.img1{
-  position: relative;
-  opacity: 0.2;
-
-}
-.img2{
-  position: absolute;
-  top: 10px;
-  left: 30px;
-}
-
 .container:after{
- content: "";
- height: 100%;
- width: 100%;
- position: absolute;
- top:0;
- left:0;
- border-radius: 20px 20px 0 0;
- opacity: 0.7;
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 20px 20px 0 0;
+  opacity: 0.7;
 }
-
-/* .card2>.container:after{ */
-  /* background-image: linear-gradient( */
-    /* 135deg, */
-    /* #00ec6a,#3674fb */
-  /* ); */
-/* } */
-/* .card3>.container:after{ */
-  /* background-image: linear-gradient( */
-    /* 135deg, */
-    /* #f08c45,#fbeb36 */
-  /* ); */
-/* } */
+.card1>.container:after{
+  background-image: linear-gradient(
+      135deg,
+      #0100ec,
+      #fb36f4
+  );
+}
+.card2>.container:after{
+  background-image: linear-gradient(
+      135deg,
+      #2bdce3,
+      #42ffdb
+  );
+}
+.card3>.container:after{
+  background-image: linear-gradient(
+      135deg,
+      #ffab1d,
+      #f8501c
+  );
+}
 .details{
-  display: flex;
-
-  flex-direction: column;
   padding: 20px 10px;
 }
 .details>h3{
-  color:#fff;
-  font-weight:600;
+  color: #ffffff;
+  font-weight: 600;
   font-size: 18px;
   margin: 10px 0 15px 0;
 }
 .details>ul{
-  list-style: none;
   color: #a0a0a0;
   font-size: 15px;
   line-height: 30px;
   font-weight: 400;
+  list-style: none;
 }
