--- a/style.css
+++ b/style.css
@@ -30,6 +30,14 @@ img{
   display: block;
   border-radius: 20px 20px 0 0;
 }
+
+.bud{
+  position: absolute;
+  top: 10px;
+  left: 30px;
+  z-index: 10;
+}
+
 .container:after{
   content: "";
   height: 100%;
